# tell-me-why

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.svelte  app.css  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/lib/actions/: revealOnScroll.ts
src/lib/components/: AnalysisConfigPanel.svelte  BackButton.svelte  CharacterProfilePanel.svelte  MaterialInputPanel.svelte  ModelSelector.svelte  SettingsModal.svelte  ThemeToggle.svelte
src/lib/components/result/: CharacterDrawer.svelte  CharacterNetwork.svelte  FactionsSplit.svelte  HotQuotesCarousel.svelte  LongformFallback.svelte  PlotTwistCard.svelte  ResultView.svelte  TimelineSection.svelte  VerdictHero.svelte  WinnersLosersBoard.svelte  types.ts
src/lib/stores/: index.ts  theme.ts
src/lib/utils/: extractEssence.ts
